# filetransferlib

./: README.md  __init__.py  core.py  pyproject.toml  setup.py
tests/: test_windows_network.py
